--- a/shouldBeWinnable/package.json
+++ b/shouldBeWinnable/package.json
@@ -11,9 +11,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.4",
